# tmc-chalice-cdk

./: .gitignore  pyproject.toml
api/: app.py  pyproject.toml  requirements.txt
api/.chalice/: config.json
api/chalicelib/: db.py
api/chalicelib/models/: item.py
infra/: app.py  pyproject.toml
infra/infra/: infra_stack.py
infra/stacks/: items_manager_stack.py
