[tool.poetry]
name = "items-manager-infra"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.7"
"aws-cdk.core" = "^1.19"
"aws-cdk.aws-dynamodb" = "^1.19"
"aws-cdk.aws-iam" = "^1.19"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
